--- a/README
+++ b/README
@@ -1,6 +1,21 @@
-
 A "showq" style job summary utility for SLURM. Useful for generating a
 summary of all running, pending, and blocked jobs.
+
+    Copyright (C) 2013 Karl Schulz, Paul Edmon
+
+    This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
 
 Texas Advanced Computing Center
 Originally: November 2012
