--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 A "showq" style job summary utility for SLURM. Useful for generating a
 summary of all running, pending, and blocked jobs.
 
-    Copyright (C) 2013 Karl Schulz, Paul Edmon
+    Copyright (C) 2013, 2022 Karl Schulz, Paul Edmon
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
