Adding more copyright nonsense.

--- a/README
+++ b/README
@@ -21,7 +21,7 @@ Texas Advanced Computing Center
 Originally: November 2012
 karl@tacc.utexas.edu
 
-Modified by Paul Edmon at Harvard Research Computing
+Modified by Paul Edmon at FAS Harvard Research Computing
 pedmon@cfa.harvard.edu
 
 -------------------
